--- a/client/app/profile/profile.html
+++ b/client/app/profile/profile.html
@@ -1,1 +1,7 @@
-<div>This is the profile view.</div>
+<div class="container">
+  <div class="row">
+    <div class="col-lg-12">
+      <h1 class="page-header">Your profile</h1>
+    </div>
+  </div>
+</div>
