--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -1,17 +1,3 @@
-<header class="hero-unit" id="banner">
-  <div class="container">
-    <h1>Welcome to Boss Finder!</h1>
-    <p class="lead">The best recruiting app in the whole world...</p>
-  </div>
-</header>
-
-<div class="container">
-  <div class="row">
-    <div class="col-lg-12">
-      <h1 class="page-header">Features:</h1>
-      <ul class="list-group col-md-4 col-lg-4 col-sm-6" ng-repeat="feature in $ctrl.features">
-	<li class="list-group-item">{{feature}}</li>
-      </ul>
-    </div>
-  </div>
-</div>
+<navbar></navbar>
+<div ui-view=""></div>
+<footer></footer>
