--- a/client/index.html
+++ b/client/index.html
@@ -72,7 +72,7 @@
       <script src="app/landing/landing.component.js"></script>
       <script src="app/landing/landing.js"></script>
       <script src="app/main/main.component.js"></script>
-      <script src="app/profile/profile.controller.js"></script>
+      <script src="app/profile/profile.component.js"></script>
       <script src="app/profile/profile.js"></script>
       <script src="app/account/login/login.controller.js"></script>
       <script src="components/auth/auth.service.js"></script>
