--- a/client/index.html
+++ b/client/index.html
@@ -65,9 +65,9 @@
       <script src="app/admin/admin.module.js"></script>
       <script src="components/util/util.module.js"></script>
       <script src="app/account/signup/signup.component.js"></script>
-      <script src="app/admin/admin.controller.js"></script>
+      <script src="app/admin/admin.component.js"></script>
+      <script src="app/admin/admin.js"></script>
       <script src="app/account/account.js"></script>
-      <script src="app/admin/admin.router.js"></script>
       <script src="app/app.constant.js"></script>
       <script src="app/landing/landing.component.js"></script>
       <script src="app/landing/landing.js"></script>
